# mkdbg

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODOS.md
.github/workflows/: ci.yml  hil-gate.yml  release.yml
arch/: arch.h  arch_registry.c  cortex_m.c  riscv32.c
bsp/: board.c  seam_port.c
cmake/: build_info.h.in
cmsis/CMSIS/: README.md
configs/bringup/: README.md
demo/: README.md
docs/: COMMANDS.md  DEVELOPER_GUIDE.md  MKDBG.md  PORTING.md
docs/assets/: banner.txt
examples/stm32f446/: CMakeLists.txt
examples/stm32f446/docs/: OVWATCH.md  PLATFORM_NARRATIVE.md  vm32_debug.md  vm32_design.md  vm32_errors.md
examples/stm32f446/docs/semantic_telemetry/: EVENT_DICTIONARY.md  schema.json
examples/stm32f446/scripts/: mkdbg_native_host_tests.sh
freertos/: README.md
include/: board.h
linker/: README.md
scenarios/: README.md
scripts/: ci_smoke.sh  install.sh
src/: action.c  core.c  dashboard.c  debug_cli.c  debug_session.c  debug_session.h  debug_tui.c  debug_tui.h  dwarf.c  dwarf.h  launcher.c  main.c  mkdbg.h  parse.c  probe.c  termbox2_impl.c  thumb_dis.c
tests/: analysis_engine_host_tests.c  arch_test.c  board.h  bringup_phase_host_tests.c  dependency_graph_host_tests.c  dwarf_test.c  kdi_host_tests.c  seam_host_stub.c  semantic_telemetry_host_tests.c  smoke.sh  sonic_lite_host_tests.c  test_thumb_dis.c  vm32_host_tests.c
tools/: board_regress.py  bringup_compile.py  bringup_compile_host_tests.sh  bringup_regress.py  bringup_ui.py  build.sh  build_identity_host_tests.sh  build_mkdbg_native.sh  ci_smoke.sh  driver_profile_compare.py  driver_profile_compare_regress.py  flash.sh  install_mkdbg.sh  install_mkdbg_host_tests.sh  install_ovwatch.sh  kdi_driver_regress.py  kdi_irq_regress.py  mkdbg  mkdbg.h  mkdbg_dashboard.c  mkdbg_git.c  mkdbg_host_tests.sh  mkdbg_native.c  mkdbg_native_host_tests.sh  mkdbg_parse.c  mkdbg_seam.c  openocd.cfg  ovwatch  regression_summary.py  triage_bundle.py  triage_replay.py  vm32
